plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.training.query'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}
ext{
	droolsVersion = '8.44.0.Final'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor'org.projectlombok:lombok'


	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	implementation "org.drools:drools-core:${droolsVersion}"
	implementation "org.drools:drools-compiler:${droolsVersion}"
	implementation "org.drools:drools-mvel:${droolsVersion}"
	implementation "org.kie:kie-api:${droolsVersion}"


	implementation 'javax.inject:javax.inject:1'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

	implementation 'net.sf.jasperreports:jasperreports:6.20.5'
	implementation 'com.github.librepdf:openpdf:1.3.30'
	//implementation 'com.lowagie:itext:2.1.7'
	implementation 'org.apache.commons:commons-collections4:4.4'
	//implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
bootRun {
	jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

